--- a/style.css
+++ b/style.css
@@ -61,11 +61,11 @@ h2 {
     border-color: #777;
 }
 
-.form-contol.success input {
+.form-control.success input {
     border-color: var(--success-color);
 }
 
-.form-contol.success input {
+.form-control.error input {
     border-color: var(--error-color);
 }
 
@@ -77,7 +77,7 @@ h2 {
     visibility: hidden;
 
 }
-form-control.error small {
+.form-control.error small {
     visibility: visible;
 }
 
@@ -92,5 +92,4 @@ form-control.error small {
     padding: 10px; 
     margin-top: 20px; 
     width: 100%; 
-
 }
